welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:2: error: not found: value nbPAs
def move(nbPas:Int, versLAvant:Boolean) {if (versLAvant) {avance(nbPAs)}
                                                                 ^